--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: bookclub-BOOKABBR
-Title: BOOKNAME Book Club
+Package: bookclub-bayes_rules
+Title: Bayes Rules! Book Club
 Version: 0.0.1
 Authors@R: c(
   person(
@@ -8,7 +8,7 @@ Authors@R: c(
     role = c("aut", "cre", "cph")
   )
   )
-URL: https://r4ds.github.io/bookclub-BOOKABBR, https://github.com/r4ds/bookclub-BOOKABBR
+URL: https://r4ds.github.io/bookclub-bayes_rules, https://github.com/r4ds/bookclub-bayes_rules
 Depends:
     R (>= 3.1.0)
 Imports: 
