--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,6 @@
-book_filename: "bookclub-BOOKABBR"
-repo: https://github.com/r4ds/bookclub-BOOKABBR
-edit: "https://github.com/r4ds/bookclub-BOOKABBR/edit/main/%s"
+book_filename: "bookclub-bayes_rules"
+repo: https://github.com/r4ds/bookclub-bayes_rules
+edit: "https://github.com/r4ds/bookclub-bayes_rules/edit/main/%s"
 output_dir: "_book"
 delete_merged_file: true
 language:
