--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,16 @@ URL: https://r4ds.github.io/bookclub-bayes_rules, https://github.com/r4ds/bookcl
 Depends:
     R (>= 3.1.0)
 Imports: 
+    bayesplot,
+    bayesrules,
     bookdown,
+    broom.mixed,
+    e1071,
+    forcats,
+    janitor,
+    modelr,
     rmarkdown,
+    rstan,
+    rstanarm,
+    tidybayes,
     tidyverse
