adding chapter 1 without exercices

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,26 @@
 book_filename: "bookclub-bayes_rules"
+rmd_files:
+    - "index.Rmd"
+    - "preface.Rmd"
+    - "01.Rmd"
+    - "02.Rmd"
+    - "03.Rmd"
+    - "04.Rmd"
+    - "05.Rmd"
+    - "06.Rmd"
+    - "07.Rmd"
+    - "08.Rmd"
+    - "09.Rmd"
+    - "10.Rmd"
+    - "11.Rmd"
+    - "12.Rmd"
+    - "13.Rmd"
+    - "14.Rmd"
+    - "15.Rmd"
+    - "16.Rmd"
+    - "17.Rmd"
+    - "18.Rmd"
+    - "19.Rmd"
 repo: https://github.com/r4ds/bookclub-bayes_rules
 edit: "https://github.com/r4ds/bookclub-bayes_rules/edit/main/%s"
 output_dir: "_book"
