case sensitive adds of DiagrammeR

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Imports:
     bayesrules,
     bookdown,
     broom.mixed,
-    diagrammeR,
+    DiagrammeR,
     e1071,
     forcats,
     janitor,
