--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ bookclub-bayes_rules.Rmd
 bookclub-bayes_rules.html
 bookclub-bayes_rules.knit.md
 bookclub-bayes_rules_files
+bookclub-bayes_rules_cache
 libs
